--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "MidwestSeaSaltCompany-HaloCustom",
+  "name": "MidwestSeaSaltCompany-HaloCustom Update 23102023",
   "version": "2.3.2",
   "meta": {
     "price": 0,
