Done Change Custom Not Test

--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "name": "MidwestSeaSaltCompany-HaloCustom Done Custom Upload Demo",
+  "name": "MidwestSeaSaltCompany-HaloCustom Done Custom Upload Demo 08112023",
   "version": "2.3.2",
   "meta": {
     "price": 0,
